samples/_failures_safe/1761295987_de0999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_253818e3.c: In function ‘main’:
./samples/SAFE/__tmp_253818e3.c:145:5: error: expected declaration or statement at end of input
  145 |     int entry_count = read_log_file(filename, entries, MAX_ENTRIES);
      |     ^~~
